Sat Apr 18 15:18:39 EDT 2009	JK Lowden <jklowden@freetds.org>
	* include/sybdb.h include/tds.h
	* src/apps/bsqldb.c src/apps/tsql.c
	* src/ctlib/ct.c src/dblib/dblib.c src/odbc/odbc.c
	* src/tds/config.c src/tds/login.c src/tds/util.c
	- support TDSEINTF and TDSEUHST to distinguish name-lookup failures.

Sat Apr 18 17:21:15 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/timeout.c:
	- fix test according to vendors behavior

Fri Apr 17 19:16:14 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/sybase_tests: set LD_RUN_PATH to find proper libraries

Fri Apr 17 16:28:55 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/sybase_tests: script to compile dblib unittests using Sybase

Fri Apr 17 11:54:00 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/common.c: disable output buffering
	* src/dblib/unittests/null2.c: fix for MS library

Thu Apr 16 09:23:45 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/common.c: fix extension stripping

Wed Apr 15 22:54:49 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/common.c: fix dirname for win32

Wed Apr 15 09:59:47 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/common.c: fix core detecting sql input file

Wed Apr  8 21:35:02 EDT 2009	JK Lowden <jklowden@freetds.org>
	* include/fakepoll.h src/dblib/unittests/common.c
	* vms/config_h.vms vms/descrip_mms.template
	- apply patch from Craig A. Berry ML 8 April 2009
	* doc/userguide.sgml document ASA Servername

Fri Mar 27 10:22:22 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c: remove warning and check

Tue Mar 24 11:38:29 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/test-auto.sh: style update

Mon Mar 23 21:19:02 EDT 2009	JK Lowden <jklowden@freetds.org>
	* src/dblib/bcp.c src/dblib/dblib.c src/dblib/dbutil.c
	* src/dblib/rpc.c src/dblib/xact.c