@@ -1,3 +1,6 @@
+Mon Apr 20 10:55:17 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/dblib/dblib.c: fix timeout test
+
 Sat Apr 18 15:18:39 EDT 2009	JK Lowden <jklowden@freetds.org>
 	* include/sybdb.h include/tds.h
 	* src/apps/bsqldb.c src/apps/tsql.c
@@ -1491,4 +1494,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2772 2009/04/18 19:35:38 jklowden Exp $
+$Id: ChangeLog,v 1.2773 2009/04/20 08:56:17 freddy77 Exp $
